--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 *~
-site-lisp
-ac-comphist.dat
-anything-c-adaptive-history
-auto-install
-auto-save-list
 .ap-project-files
+.emacs.d/site-lisp
+.emacs.d/ac-comphist.dat
+.emacs.d/anything-c-adaptive-history
+.emacs.d/auto-install
+.emacs.d/auto-save-list
+.emacs.d/bookmarks
