--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,13 @@
 *~
 .ap-project-files
-.emacs.d/site-lisp
-.emacs.d/ac-comphist.dat
-.emacs.d/anything-c-adaptive-history
-.emacs.d/auto-install
-.emacs.d/auto-save-list
-.emacs.d/bookmarks
+dot.emacs.d/site-lisp
+dot.emacs.d/ac-comphist.dat
+dot.emacs.d/anything-c-adaptive-history
+dot.emacs.d/auto-install
+dot.emacs.d/auto-save-list
+dot.emacs.d/bookmarks
+dot.emacs.d/inits/00_private.el
+dot.emacs.d/bin
+dot.emacs.d/eshell
+dot.emacs.d/tags
+dot.emacs.d/tramp
