--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
 *~
+.saved-places
+ac-comphist.dat
 auto-save-list
 elpa
+inits/00_private.el*
+projectile-bookmarks.eld
 quelpa
 shellenv.el
-inits/00_private.el*
-ac-comphist.dat
-projectile-bookmarks.eld
